@@ -23,25 +23,19 @@
  */
 package revxrsal.commands.orphan;
 
-import lombok.AllArgsConstructor;
 import org.jetbrains.annotations.NotNull;
-import revxrsal.commands.CommandHandler;
+import revxrsal.commands.Lamp;
 import revxrsal.commands.annotation.Command;
-import revxrsal.commands.core.CommandPath;
-import revxrsal.commands.util.Strings;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static revxrsal.commands.util.Preconditions.notNull;
 
 /**
  * Represents the entrypoint to creation of {@link OrphanCommand}s.
  * <p>
- * Methods {@link #path(String)}, {@link #path(String...)} have the same exact
- * behavior as {@link Command} annotations.
+ * The method {@link #path(String...)} has the same exact behavior
+ * as {@link Command} annotations.
  *
  * <pre>
  * {@code
@@ -50,35 +44,17 @@ import static revxrsal.commands.util.Preconditions.notNull;
  * - @Command("foo bar", "buzz buff") -> Orphans.path("foo bar", "buzz buff")
  * }
  * </pre>
- * Registering {@link OrphanCommand}s directly into a {@link CommandHandler#register(Object...)}
+ * Registering {@link OrphanCommand}s directly into a {@link Lamp#register(Object)}
  * will throw an exception. Orphan commands should be wrapped using this class as follows:
  * <pre>
  * {@code
- * commandHandler.register(Orphans.path("foo").handler(new Foo()));
+ * lamp.register(Orphans.path("foo").handler(new Foo()));
  * }
  * </pre>
  *
  * @see OrphanCommand
  */
-@AllArgsConstructor
-public final class Orphans {
-
-    /**
-     * Starts the registration of an orphan command. The input for
-     * this method has exactly the same behavior as {@link Command}.
-     * <p>
-     * {@code
-     * - @Command("foo bar") -> Orphans.path("foo bar")
-     * }
-     *
-     * @param path The command path. This accepts spaces for commands
-     *             with subcategories.
-     * @return A builder {@link Orphans}. You must call {@link #handler(OrphanCommand)} after.
-     */
-    public static Orphans path(@NotNull String path) {
-        notNull(path, "path");
-        return new Orphans(Collections.singletonList(CommandPath.get(Strings.splitBySpace(path.trim()))));
-    }
+public record Orphans(List<String> paths) {
 
     /**
      * Starts the registration of an orphan command. The input for
@@ -94,21 +70,7 @@ public final class Orphans {
      */
     public static Orphans path(@NotNull String... paths) {
         notNull(paths, "paths");
-        return new Orphans(Arrays.stream(paths)
-                .map(text -> Strings.splitBySpace(text.trim()))
-                .map(CommandPath::get)
-                .collect(Collectors.toList()));
-    }
-
-    /**
-     * Starts the registration of an orphan command.
-     *
-     * @param path The command path. See {@link CommandPath}.
-     * @return A builder {@link Orphans}. You must call {@link #handler(OrphanCommand)} after.
-     */
-    public static Orphans path(@NotNull CommandPath path) {
-        notNull(path, "path");
-        return new Orphans(Collections.singletonList(path));
+        return new Orphans(List.of(paths));
     }
 
     /**
@@ -116,14 +78,11 @@ public final class Orphans {
      * implement {@link OrphanCommand}.
      *
      * @param handler The command class logic.
-     * @return An {@link OrphanRegistry} that can be passed to {@link CommandHandler#register(Object...)}
+     * @return An {@link OrphanRegistry} that can be passed to {@link Lamp#register(Object)}
      * to be registered.
      */
     public OrphanRegistry handler(OrphanCommand handler) {
         notNull(handler, "orphan command");
-        return new OrphanRegistry(path, handler);
+        return new OrphanRegistry(paths, handler);
     }
-
-    private final List<CommandPath> path;
-
 }
